fix: navbar overflow

--- a/src/app/_components/Navbar/index.module.scss
+++ b/src/app/_components/Navbar/index.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100dvw;
+  max-width: 100dvw;
   color: white;
   padding: 20px 80px 0 20px;
 
